--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,8 @@
 .page {
-  background-color: var(--dark-gray);
-  color: var(--white);
+  background-color: var(--white);
   display: flex;
   font-size: 1.6rem;
   justify-content: center;
   min-height: 100vh;
+  position: relative;
 }
