--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -20,6 +20,16 @@
   width: 55%;
 }
 
+.goWallet {
+  animation: openWallet 1s ease-in;
+  position: relative;
+}
+
+.goWalletForm {
+  animation: openWalletForm 1s ease-in;
+  position: relative;
+}
+
 .logo {
   height: 110px;
   width: 110px;
@@ -88,7 +98,7 @@
   letter-spacing: 2.5px;
   margin-top: 10px;
   outline: none;
-  padding: 1.3em 3em;
+  padding: 20px 50px;
   text-transform: uppercase;
   transition: all 0.3s ease 0s;
 }
@@ -107,4 +117,30 @@
   box-shadow: 0 15px 20px rgba(0, 37, 0, 0.2);
   color: var(--green);
   transform: translateY(-7px);
+}
+
+@keyframes openWallet {
+
+  0% {
+    left: 0;
+    opacity: 1;
+  }
+
+  100% {
+    left: -800px;
+    opacity: 0;
+  }
+}
+
+@keyframes openWalletForm {
+
+  0% {
+    opacity: 1;
+    right: 0;
+  }
+
+  100% {
+    opacity: 1;
+    right: -800px;
+  }
 }
