--- a/src/pages/Wallet.module.css
+++ b/src/pages/Wallet.module.css
@@ -1,20 +1,21 @@
 .background {
   align-items: center;
-  animation: openWallet 2s ease-in;
+  animation: openWallet 1.2s ease-in;
   background: url('../images/background.png') var(--light-green);
   background-position: right;
   background-repeat: no-repeat;
   background-size: cover;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  position: absolute;
+  position: relative;
   width: 100%;
 }
 
 .header {
   align-items: center;
-  animation: openHeader 4s ease-in;
+  animation: openHeader 2s ease-in;
   background-color: var(--white);
   border-bottom-left-radius: 16px;
   border-bottom-right-radius: 16px;
@@ -22,9 +23,14 @@
   flex-direction: column;
   justify-content: center;
   max-width: 1200px;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
   position: relative;
   width: 80%;
+  z-index: 1;
+}
+
+.loading {
+  display: none;
 }
 
 @keyframes openWallet {
