--- a/src/components/Table.module.css
+++ b/src/components/Table.module.css
@@ -66,10 +66,12 @@
 @keyframes openWallet {
 
   0% {
+    opacity: 0;
     top: calc(100vh + 166px);
   }
 
   100% {
+    opacity: 1;
     top: -166px;
   }
 }
