--- a/src/pages/Wallet.module.css
+++ b/src/pages/Wallet.module.css
@@ -60,14 +60,17 @@
 @keyframes openHeader {
 
   0% {
+    opacity: 0;
     top: -500px;
   }
 
   50% {
+    opacity: 0.6;
     top: -400px;
   }
 
   100% {
+    opacity: 1;
     top: 0;
   }
 }
