--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -87,13 +87,17 @@
 }
 
 .btnLogin {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
   background-color: var(--green);
   border: none;
   border-radius: 45px;
   box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
   color: var(--light-green);
   cursor: pointer;
-  font-size: 1.6rem;
+  font-size: 3rem;
   font-weight: 700;
   letter-spacing: 2.5px;
   margin-top: 10px;
@@ -117,6 +121,10 @@
   box-shadow: 0 15px 20px rgba(0, 37, 0, 0.2);
   color: var(--green);
   transform: translateY(-7px);
+}
+
+.logoG {
+  height: 35px;
 }
 
 @keyframes openWallet {
